# splitty

./: .gitignore  .travis.yml  Pipfile  README.md  circle.yml  codecov.yml  mkdocs.yml  pylama.ini  pylava.ini  pyproject.toml  setup.py  tox.ini
docs/: example.md  index.md
examples/: parse_a_book.py
examples/book_parsed/: mobydick.txt  parse_a_book.py
examples/tjsp_parse/: README.md  caderno3.json  caderno3.txt  caderno3_parsed.json  caderno3_parsed.txt  example.py
splitty/: __init__.py  dispatcher.py  eager.py  file.py  splitty.py  splitty.pyi
tests/: file_tests.py  test_splitty.py
