[tool.poetry]
name = "splitty"
version = "0.0.10"
description = "Spitty was born to clear text files (in iterable format) and find matches to group it and create blocks inside iterables."
authors = ["dunossauro <mendesxeduardo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
tox = "^3.14.4"
mkdocs = "^1.0.4"
mypy = "^0.761"
monkeytype = "^19.11.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
